using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.InputSystem;

internal class AnimationStrings
{
    internal static string specialAttackTrigger = "SpecialAttack";
    internal static string LockVelocity = "LockVelocity";
    internal static string hitTrigger = "hit";
    internal static string IsHit = "IsHit";
    internal static string canMove = "canMove";
    internal static string IsMoving = "IsMoving";
    internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string isOnWall = "isOnWall";
    internal static string attackTrigger = "attack";
    internal static string hasTarget = "hasTarget";
    internal static string IsAlive = "IsAlive";
}